# parallel-stacks

./: .gitignore  LICENSE.md  README.md  parallel-stacks.py
examples/cpp/: example1.cpp  example3_stackoverflow.cpp
examples/python/: example_1.py
threads-merger/: .gitignore  CMakeLists.txt  README.md  cli.cpp  conanfile.txt  index.html  main.cpp  merger-wasm.cpp  merger.cpp  merger.cppm  merger.hpp  unittests.cpp
threads-merger/html/: html_table.cpp  html_table.hpp
threads-merger/tests_data/: test-frame.dot  test-int.dot  test-recursion.dot
vscode-ext/parallel-stacks/: .gitignore  .vscodeignore  CHANGELOG.md  DEVGUIDE.md  LICENSE.md  README.md  TODO  package-lock.json  package.json  tsconfig.json
vscode-ext/parallel-stacks/media/: webview.html
vscode-ext/parallel-stacks/src/: extension.ts  stackBounds.ts
vscode-ext/parallel-stacks/src/test/: merger-dot.test.ts  stack-bounds.test.ts
